--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -12,5 +12,5 @@ on:
         uses: avto-dev/markdown-lint@v1.5.0
         with:
           args: '.'
-          config: '.markdownlint.yml'
+          config: 'markdownlint.yml'
     
